syntax = "proto3";

package gpu;

service GpuService {
  rpc Prompt(PromptRequest) returns (PromptResponse);
}

message PromptRequest {
  string prompt = 1;
}

message PromptResponse {
  string response = 1;
  string status = 2;
}
